page builder breadcrumbs fix when text overflows

--- a/assets/less/components/page-builder/chrome/props-menu/breadcrumbs.less
+++ b/assets/less/components/page-builder/chrome/props-menu/breadcrumbs.less
@@ -11,12 +11,12 @@
 
   overflow: hidden;
   white-space: nowrap;
-  direction: ltr;
+  direction: rtl;
   text-align: left;
   font-size: 12px;
 
   a {
-    display: inline-block;
+    position: relative;
     text-decoration: none;
     font-size: 12px;
     color: #efefef;
@@ -33,5 +33,13 @@
 
   .current {
     color: #999999;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    left: 0; top: 0; bottom: 0;
+    width: 7px;
+    background: linear-gradient(to right, rgba(51,54,59,1) 0%, rgba(51,54,59,0) 100%);
   }
 }
